--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/next"]
 	path = themes/next
 	url = https://github.com/theme-next/hexo-theme-next
+[submodule "themes/minos"]
+	path = themes/minos
+	url = https://github.com/ppoffice/hexo-theme-minos.git
