--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/theme-next/hexo-theme-next
 [submodule "themes/minos"]
 	path = themes/minos
-	url = https://github.com/ppoffice/hexo-theme-minos.git
+	url = https://github.com/bcmdr/minos-theme-custom
