clean package json, add dev script

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "hexo-blog",
+  "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "dev": "hexo serve"
+  },
   "hexo": {
     "version": "3.8.0"
   },
